--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -27,16 +27,19 @@
             border: none;
             border-left: 4px solid red;
             background-color: rgba(19, 197, 19, 0.32);
+            padding: 1em;
         }
         .second-para {
             border: none;
             border-left: 4px solid #0000ff;
             background-color: #0000ff46;
+            padding: 1em;
         }
         .third-para {
             border: none;
             border-left: 4px solid #50f70e;
             background-color: #e3e651f8;
+            padding: 1em;
         }
         .btn-login {
             background: rgb(26, 214, 29);
